--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,11 @@ body {
   }
 }
 
-.welcome {
+.welcome,
+.history,
+.vision,
+.statement,
+.core-values {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -103,7 +107,11 @@ body {
   background-color: #ffffff;
 }
 
-.welcome-details {
+.welcome-details,
+.history-details,
+.vision-details,
+.statement-details,
+.core-details {
   display: flex;
   padding: 1rem;
   flex-direction: column;
@@ -123,6 +131,17 @@ body {
     width: 8rem;
     aspect-ratio: 4/4;
     animation: slideInFromLeft 3s ease forwards;
+  }
+}
+
+.form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  img {
+    width: 4rem;
   }
 }
 
@@ -322,4 +341,84 @@ body {
     border-radius: 50%;
     background-color: rgb(18, 60, 175);
   }
+}
+.about-hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-image: url(/public/images/church-pic.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.about-gap {
+  margin-top: 2rem;
+}
+.block-2 {
+  display: flex;
+  flex-direction: row;
+  margin-top: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem;
+  box-shadow:
+    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  gap: 2rem;
+  border-radius: 1rem;
+  padding: 1rem;
+  background-color: #ffffff;
+  font-family: Ubuntu;
+  color: rgb(18, 60, 175);
+  animation: slideInFromLeft 3s ease forwards;
+}
+
+.period-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: left;
+
+  padding: 1rem;
+}
+
+.det {
+  /* max-width: 768px; */
+  padding: 2rem;
+  box-shadow:
+    rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
+    rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  border-radius: 2rem;
+  width: 100%;
+  aspect-ratio: 5/2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  height: fit-content;
+  margin-top: 2rem;
+}
+
+li {
+  list-style: dot;
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  align-items: left;
+  .par1 {
+    font-weight: bold;
+  }
+}
+ol {
+  display: flex;
+  flex-direction: column;
+  justify-content: left;
+  gap: 1rem;
 }
