--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,137 @@ body {
   padding: 0%;
 }
 
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: fit-content;
+  width: auto;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+  font-family: Ubuntu;
+  color: white;
+  padding: 12px 24px;
+  transition: all 0.4s ease;
+  background-color: #ffffff00;
+}
+
+.header.scrolled {
+  backdrop-filter: blur(10px);
+  background: rgba(0, 0, 0, 0.884);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.hamburger-menu {
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 25px;
+  height: 20px;
+  cursor: pointer;
+}
+.hamburger-menu .bar {
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+  transition: 0.3s ease;
+}
+
+.hamburger-menu .bar.active:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+.hamburger-menu .bar.active:nth-child(2) {
+  opacity: 0;
+}
+.hamburger-menu .bar.active:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -6px);
+}
+
+.left-section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1rem;
+  font-family: Ubuntu;
+}
+
+.left-section img {
+  width: 4rem;
+}
+.left-section h2 {
+  margin-left: -2rem;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  gap: 2rem;
+}
+
+nav a {
+  color: inherit;
+  text-decoration: none;
+  display: flex;
+  transition: 0.5s ease-in-out;
+  align-items: center;
+  flex-direction: column;
+}
+
+nav a:hover {
+  width: fit-content;
+  color: #ffd43b;
+  scale: 1.2;
+  transition: 0.2s ease-in-out;
+}
+
+.products-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  align-items: left;
+  background-color: #003366;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  min-width: 198px;
+
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+  z-index: 1000;
+  padding: 10px 0;
+}
+
+.products-dropdown a {
+  display: block;
+  padding: 10px 20px;
+  color: white;
+  padding-left: 20px;
+  text-decoration: none;
+  transition: background-color 0.2s;
+}
+
+.products-dropdown a:hover {
+  color: #ffd43b;
+}
+
+.products-menu-item {
+  position: relative;
+  display: inline-block;
+}
+
+nav ul li .button {
+  margin: 0 auto;
+}
 .hero {
   display: flex;
   flex-direction: column;
@@ -41,15 +172,45 @@ body {
   color: White;
   h1 {
     font-size: 4rem;
-    animation: slideInFromRight 3s ease forwards;
   }
-  p {
-    animation: slideInFromLeft 3s ease forwards;
-  }
+
   img {
     width: 8rem;
     aspect-ratio: 4/4;
-    animation: slideInFromLeft 3s ease forwards;
+  }
+}
+
+.autoShow {
+  animation: text-appear both;
+  animation-timeline: view();
+  animation-range: entry 10% cover 100vh;
+}
+
+@keyframes text-appear {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.autoSlide {
+  animation: text-slide both;
+  animation-timeline: view();
+  animation-range: entry 10% cover 90vh;
+}
+
+@keyframes text-slide {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
@@ -58,15 +219,11 @@ body {
   color: White;
   h1 {
     font-size: 4rem;
-    animation: slideInFromRight 3s ease forwards;
   }
-  p {
-    animation: slideInFromLeft 3s ease forwards;
-  }
+
   img {
     width: 8rem;
     aspect-ratio: 4/4;
-    animation: slideInFromLeft 3s ease forwards;
   }
 }
 
@@ -122,15 +279,11 @@ body {
   color: rgb(18, 60, 175);
   h1 {
     font-size: 4rem;
-    animation: slideInFromRight 3s ease forwards;
   }
-  p {
-    animation: slideInFromLeft 3s ease forwards;
-  }
+
   img {
     width: 8rem;
     aspect-ratio: 4/4;
-    animation: slideInFromLeft 3s ease forwards;
   }
 }
 
@@ -143,6 +296,14 @@ body {
   img {
     width: 4rem;
   }
+}
+
+.vis-mis-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
 }
 
 .intro {
@@ -191,7 +352,6 @@ body {
   background-color: #ffffff;
   font-family: Ubuntu;
   color: rgb(18, 60, 175);
-  animation: slideInFromLeft 3s ease forwards;
 }
 
 .service-periods {
@@ -251,7 +411,6 @@ body {
   background-color: #ffffff;
   font-family: Ubuntu;
   color: rgb(18, 60, 175);
-  animation: slideInFromLeft 3s ease forwards;
 }
 
 .clash {
@@ -283,7 +442,6 @@ body {
   background-color: #ffffff;
   font-family: Ubuntu;
   color: rgb(18, 60, 175);
-  animation: slideInFromLeft 3s ease forwards;
 
   img {
     border-radius: 0.5rem;
@@ -328,7 +486,6 @@ body {
   background-color: #ffffff;
   font-family: Ubuntu;
   color: rgb(0, 0, 0);
-  animation: slideInFromLeft 3s ease forwards;
 
   .circle {
     width: 3rem;
@@ -375,7 +532,6 @@ body {
   background-color: #ffffff;
   font-family: Ubuntu;
   color: rgb(18, 60, 175);
-  animation: slideInFromLeft 3s ease forwards;
 }
 
 .period-2 {
@@ -391,6 +547,7 @@ body {
 .det {
   /* max-width: 768px; */
   padding: 2rem;
+  text-align: center;
   box-shadow:
     rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
@@ -404,6 +561,11 @@ body {
   font-size: 1.5rem;
   height: fit-content;
   margin-top: 2rem;
+
+  h3 {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
 }
 
 li {
@@ -421,4 +583,50 @@ ol {
   flex-direction: column;
   justify-content: left;
   gap: 1rem;
+}
+
+@media (max-width: 900px) {
+  nav ul {
+    position: fixed;
+    top: 4.5rem; /* below header */
+    right: -100%; /* hidden off-screen */
+    height: 100vh;
+    padding: 0%;
+    margin: 0%;
+    width: 80%;
+    background-color: rgb(255, 255, 255);
+    flex-direction: column;
+    border-top-left-radius: 2rem;
+    border-bottom-left-radius: 2rem;
+    border: 1px solid #003366;
+    align-items: center;
+    justify-content: top;
+    gap: 2rem;
+    overflow-y: scroll;
+    transition: right 0.3s ease-in-out;
+    z-index: 999;
+  }
+  nav ul .button {
+    background-color: #003366;
+    color: #ffd43b;
+    margin-top: 1rem;
+    transition: 0.5s ease-in-out;
+    width: 60%;
+    padding: 1rem 2rem;
+    border-radius: 0.5rem;
+  }
+
+  nav ul .button:hover {
+    color: #003366;
+    background-color: #eede00;
+    scale: 1;
+  }
+
+  nav ul.active {
+    right: 0; /* slide in */
+  }
+
+  .hamburger-menu {
+    display: flex; /* show at 900px and below */
+  }
 }
